--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,8 +1,7 @@
-<p id="notice"><%= notice %></p>
-
+<section class="co container">
 <h1>Deals</h1>
 
-<table>
+<table class="p-5">
   <thead>
     <tr>
       <th>Title</th>
@@ -10,26 +9,43 @@
       <th>Price</th>
       <th>Discount price</th>
       <th>Quantity</th>
+      
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @deals.each do |deal| %>
-      <tr>
+      <tr class="p-5">
+      <% if deal.created_at > Time.zone.now - 1.days  %>
         <td><%= deal.title %></td>
         <td><%= deal.desc %></td>
         <td><%= deal.price %></td>
         <td><%= deal.discount_price %></td>
         <td><%= deal.quantity %></td>
-        <td><%= link_to 'Show', deal %></td>
-        <td><%= link_to 'Edit', edit_deal_path(deal) %></td>
-        <td><%= link_to 'Destroy', deal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= time_ago_in_words(deal.created_at) %>ago</td>
+      
+        <td><%= link_to 'Grab The Deal', deal %></td>
+        
+        <td>
+          <%= form_for @order_item, remote: true  do |f|%>
+          <%= f.hidden_field :deal_id, value: deal.id %>
+          <%= f.number_field :quantity, value: 1, min:  1, max: 1%>
+          <%= f.submit "Add to Card ", data: { confirm: "Are you sure?" }%>
+          <% end %>
+        </td>
+       
+         <%else%>
+      <div class="L0 container text-center">No deal for Now</div>
+        <% end %>
       </tr>
+     
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Deal', new_deal_path %>
+<div id="cart">
+  <%= render 'carts/cart'%>
+</div>
+</section>
