--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -31,12 +31,12 @@
           <%= form_for @order_item, remote: true  do |f|%>
           <%= f.hidden_field :deal_id, value: deal.id %>
           <%= f.number_field :quantity, value: 1, min:  1, max: 1%>
-          <%= f.submit "Add to Card ", data: { confirm: "Are you sure?" }%>
+          <%= f.submit "Add to Card " %>
           <% end %>
         </td>
        
          <%else%>
-      <div class="L0 container text-center">No deal for Now</div>
+      <div class=" container text-center">No deal for Now</div>
         <% end %>
       </tr>
      
