--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "#{current_order.order_items.size} items with a value of Rs #{current_order.subtotal } in Cart", cart_path%>
+<%= link_to "#{current_order.order_items.size} items with a Price of Rs #{current_order.subtotal } in Cart", cart_path, class: "text-danger"%>
