--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,51 +1,55 @@
-<section class="co container">
-<h1>Deals</h1>
+<section class="container shadow-lg p-5">
+<h1 class="text-center">Deals</h1>
+<hr class="border border-info">
+<div class="row">
+<div class="col">
 
-<table class="p-5">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Desc</th>
-      <th>Price</th>
-      <th>Discount price</th>
-      <th>Quantity</th>
-      
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <% @deals.each do |deal| %>
+ <% if deal.created_at > Time.zone.now - 1.days  %>
 
-  <tbody>
-    <% @deals.each do |deal| %>
-      <tr class="p-5">
-      <% if deal.created_at > Time.zone.now - 1.days  %>
-        <td><%= deal.title %></td>
-        <td><%= deal.desc %></td>
-        <td><%= deal.price %></td>
-        <td><%= deal.discount_price %></td>
-        <td><%= deal.quantity %></td>
-        <td><%= time_ago_in_words(deal.created_at) %>ago</td>
-      
-        <td><%= link_to 'Grab The Deal', deal %></td>
-        
-        <td>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
+    <div class="col-md-4 p-5">
+      <img src="..." class="card-img" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title text-info"><%= deal.title %></h5>
+        <p class="card-text">
+       Description: <%= deal.desc %><br>
+        Price: <%= deal.price %><br>
+        <%= link_to 'More Info', deal %>
+        </p>
+        <p class="card-text"><small class="text-muted">
+        <p><span class="text-danger">Discount price </span><%= deal.discount_price %></p>
+        Avail: <%= deal.quantity %><br>
+        <%= time_ago_in_words(deal.created_at) %> ago
+        </small></p>
+        <section class="text-primary pr-5">
           <%= form_for @order_item, remote: true  do |f|%>
           <%= f.hidden_field :deal_id, value: deal.id %>
           <%= f.number_field :quantity, value: 1, min:  1, max: 1%>
-          <%= f.submit "Add to Card " %>
+          <hr>
+          <%= f.submit "Add to Card ", class: "btn btn-block btn-success" %>
           <% end %>
-        </td>
-       
-         <%else%>
-      <div class=" container text-center">No deal for Now</div>
+          </section>
+          <hr class="border border-info">
+        <%else%>
+               <div class=" container text-center">No deal for Now</div>
         <% end %>
-      </tr>
-     
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-<div id="cart">
-  <%= render 'carts/cart'%>
+      </div>
+    </div>
+  </div>
 </div>
+  <% end %>
+</div>
+<div class="col p-5 ">
+<div id="cart">
+  <%= render 'carts/cart'%><br>
+  <br>
+  <%= link_to 'Go To Cart', cart_path, class: "btn btn-dark text-justify rounded-lg" %>
+</div>
+</div>
+</div>
+
 </section>
