--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,24 +1,39 @@
 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <%= link_to  "Flash Sale", root_path, class: "navbar-brand pl-2 " %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-   
-    <form class="form-inline my-2 my-lg-0">
-       <% if user_signed_in? %>
-          <%= current_user.email %>
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'dropdown-item '   %>
-            <% else %>
-
-  <%= link_to "Login", new_user_session_path, :class => 'dropdown-item  '  %>
-   
-    <%= link_to "Sign up", new_user_registration_path, :class => 'dropdown-item '  %>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active pr-2">
+         <%= link_to  "Home", root_path, class: "navbar-link btn text-white" %>
+      </li>
+      <li class="nav-item pr-2">
+          <%= link_to  "My Cart(#{current_order.order_items.size})", cart_path, class: "navbar-link btn text-white" %>
+      </li>
+      </ul>
+       <ul class="navbar-nav">
+    <% if user_signed_in? %>
+      <li class="nav-item pr-2 text-white">
+     <span class="btn text-white"> Welcome  <%= current_user.email %></span>
+       </li>
+       <li class="nav-item pr-2">
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link btn text-white'   %>
+      </li>
      
+        <% else %>
+       <li class="nav-item pr-2">
+
+     <%= link_to "Login", new_user_session_path, :class => 'navbar-link  btn text-white'  %>
+    
+      </li>
+    <li class="nav-item pr-2">
+    <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link btn text-white'  %>
+     
+      </li>
+      </ul>
     <% end %>
-    </form>
+    
   </div>
 </nav>
