--- a/app/views/deals/_form.html.erb
+++ b/app/views/deals/_form.html.erb
@@ -6,6 +6,7 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :desc %>
+     <%= f.file_field :image %><br>
     <%= f.input :price %>
     <%= f.input :discount_price %>
     <%= f.input :quantity %>
