--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -7,7 +7,7 @@
 
     <%= form_for item, remote: true do |f| %>
         <%= f.hidden_field :deal_id, :value => item.deal.id %>
-        <%= f.number_field :quantity, :value => item.quantity.to_i %>
+        <%= f.number_field :quantity, :value => item.quantity.to_i, min:  1, max: 1 %>
         <%= f.submit "Update Card "%>
 
         <%= link_to "Remove Items", order_item_path(item), method: :delete, remote: true, data: { confirm: "Are you sure?" } %>
